--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,11 @@
   display:flex;
   gap: 5px;
 }
+.buttons>button{
+  line-height: 5px;
+  padding: 10px 10px 13px 10px;
+  font-size: 1.3em
+}
 
 .plus {
   background-color: rgb(0, 243, 32);
@@ -59,4 +64,8 @@
 
 .remove {
   background-color: red;
+}
+.sort{
+  padding: 1px 6px;
+  background: purple;
 }
